--- a/templates/sabotage_app/base.html
+++ b/templates/sabotage_app/base.html
@@ -111,7 +111,7 @@
         }
         .btn:hover { 
             background-color: #0056b3; 
-            border-color: #0056b3;
+            {% comment %} border-color: #0056b3; {% endcomment %}
             color: #ffffff;
         }
         .btn-secondary { 
